--- a/leleo.css
+++ b/leleo.css
@@ -2,15 +2,19 @@ h1 {
     text-align:center;
     background-color: aqua;
 }
+h2{
+    text-align: center;
+}
 h3{
+    font-style: oblique;
     background-color: blue;
+    text-align: center;
 }
 
 p {
     text-align: center;
     font-size: medium;
 }
-
 strong {
     font-size: larger;
 }
@@ -18,3 +22,23 @@ strong {
 body {
     background-color: blueviolet;
 }
+.imagem1 {
+    width: 200px;
+}
+.imagemcentralizada {
+ text-align: center;
+}
+
+.unicornio {
+    background-color: forestgreen
+
+}
+.brilho {
+   color: aqua;
+    font-style: italic
+}
+.lista {
+        display: inline-block;
+        padding: 5%;
+        margin-right: 10%;
+    }
