--- a/titulos.css
+++ b/titulos.css
@@ -1,6 +1,6 @@
 nav a{
     text-transform: uppercase;
-    color: darkorchid;
+    color: rgb(255, 255, 255);
     font-weight: 300;
     font-size: 100%;
     text-decoration: none ;
@@ -15,7 +15,7 @@ nav a{
 }
 
 body {
-  background-color: aquamarine;
+  background-color: rgb(0, 0, 0);
   text-align:center;
 }
 
@@ -24,9 +24,9 @@ body {
   vertical-align: top;
   background-color: #FFFFFF;
   margin: o 1.5%;
-  padding: 30px 20px;
+  padding: 15px 20px;
   box-sizing: border-box;
-  border-color: pink;
+  border-color: rgb(0, 0, 0);
   border-width: 2px;
   border-style: solid;
 }
